--- a/style.css
+++ b/style.css
@@ -1,19 +1,51 @@
+body{
+    background-image: url("assets/beachbg.jpeg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
 nav {
-    background-color: rgb(33, 168, 221);
+    background-color: rgb(22, 24, 26);
     height: 50px;
 }
 .navbarContainer {
     width: 960px;
     height: 50px;
     /* background-color: white; */
+    margin: 0px auto;}
+
+.searcharea{
+    /* size */
+    width: 960px;
+    height: 750px;
     margin: 0px auto;
 
-}
+    /* Color */
+    background-color: rgb(22, 24, 26);
+    color: white; 
+    
 
-h1 {
-    clear: both;
-    color: red;
-}
+    /* Border */
+    border-color: white;
+    border-style: solid;
+    border-width: 2px;
+
+    }
+    .area{
+        
+        width: 960px;
+        height: 50px;
+        color: white; 
+    
+        
+        
+    
+        }
+
+
+
+
 
 li {
     display: inline;
