--- a/style.css
+++ b/style.css
@@ -13,23 +13,26 @@ nav {
     width: 960px;
     height: 50px;
     /* background-color: white; */
-    margin: 0px auto;}
+    margin: 0px auto;
+    padding-top:5px
+}
 
 .searcharea{
     /* size */
     width: 960px;
-    height: 750px;
+    height: 910px;
     margin: 0px auto;
 
     /* Color */
-    background-color: rgb(22, 24, 26);
+    /* background-color: rgb(22, 24, 26); */
     color: white; 
+    text-align: center;
     
 
     /* Border */
-    border-color: white;
+    /* border-color: white;
     border-style: solid;
-    border-width: 2px;
+    border-width: 2px; */
 
     }
     .area{
@@ -41,6 +44,15 @@ nav {
         
         
     
+        }
+
+        .searchform {
+            width: 100%;
+            height: 750px;
+            background-color: rgb(236, 236, 236);
+
+
+
         }
 
 
@@ -58,3 +70,28 @@ a {
     text-decoration: none;
     
 }
+a:hover {
+    color: hotpink;
+    background-color: white;
+}
+
+.footerInfo {
+    width: 960px;
+    height: 50px;
+    /* background-color: white; */
+    margin: 0px auto;
+    padding-top:5px;
+    color: white;
+    
+ }
+
+/* Footer */
+footer {
+    /* position:fixed; */
+    left:0px;
+    bottom:0px;
+    height:75px;
+    width:100%;
+    background-color: rgb(22, 24, 26);
+    
+ }
